Et commit der snildt kunnet have været mindre. Rettet tusinde ting.